deployments/trino/mariadb-trino-metastore.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-metastore-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: trino-metastore-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-metastore-db-deployment
spec:
  selector:
    matchLabels:
      app: trino-metastore-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: trino-metastore-db
    spec:
      containers:
      - name: trino-metastore-db
        image: "mysql:5.6"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mariadb-trino-metastore-vol
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-trino-metastore-vol
        persistentVolumeClaim:
          claimName: mariadb-trino-metastore-pv-claim
