deployments/trino/trino-metastore-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trino-metastore
spec:
  ports:
  - port: 9083
  selector:
    app: trino-metastore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-metastore
spec:
  selector:
    matchLabels:
      app: trino-metastore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: trino-metastore
    spec:
      imagePullSecrets:
          - name: regcred
      enableServiceLinks: false
      containers:
      - name: trino-metastore
        image: fabianoa/hive-metastore:3.0.0
        ports:
        - containerPort: 9083
        volumeMounts:
        - name: trino-metastore-cfg-vol
          mountPath: /opt/apache-hive-metastore-3.0.0-bin/conf/metastore-site.xml
          subPath: metastore-site.xml
      volumes:
        - name: trino-metastore-cfg-vol
          configMap:
            name: trino-metastore-cfg
